loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: not found: value nbBiscuit
  nbBiscuit=0
  ^Poucet1:6: error: not found: value nbBiscuit
      nbBiscuit=nbBiscuit+1
      ^Poucet1:10: error: not found: value nbBiscuit
  if (nbBiscuit<=2){
      ^