loopdowhile.Poucet1.scala.code
do {
  var k=0
  nbBiscuit=0
  for (k<-1 to 5){
    if (estSurBiscuit==true){
      nbBiscuit=nbBiscuit+1
    }
    avance()
  }
  if (nbBiscuit<=2){
    droite()
  } else {gauche()}
} while (sortieTrouvee()==false)
avance()